Fixed bug in tables where first column was aligned left

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -297,8 +297,9 @@
 td:first-child {
     display: flex;
     align-items: center;
+    justify-content: center;
     white-space: nowrap;
-    text-align: left;
+    text-align: center;
 }
 
 .logs-table tr:last-child td {
